# learn-torch-dataloaders

./: LICENSE  README.md  TAKEAWAYS.md  pyproject.toml
docs/: animation_v1.html  animation_v2.html  architecture.md
scripts/: 01_map_style_basic.py  02_iterable_style_basic.py  03_map_style_multiworker.py  04_iterable_style_multiworker.py  05_iterable_style_sharded.py  06_shuffle_behavior.py  07_drop_last.py  08_reproducibility.py  09_worker_ordering.py
src/learn_torch_dataloaders/: datasets.py  utils.py
