[project]
name = "learn-torch-dataloaders"
version = "0.1.0"
description = "Learn how PyTorch DataLoaders work through simple, reproducible examples"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Gabriel Altay"}]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn_torch_dataloaders"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
